kube-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service
  labels:
    app: nodejsapp
    # tier:
spec:
  selector:
    app: nodejsapp
  ports:
    - name: http
      port: 80
      targetPort: 3000
